Add reviewer project category preferences